--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,9 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  /* color-scheme: light dark; */
+  color: #242424;
+  background-color: #c0f7ca;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -42,9 +42,10 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #759d77;
   cursor: pointer;
   transition: border-color 0.25s;
+  margin: 5px;
 }
 button:hover {
   border-color: #646cff;
@@ -53,16 +54,104 @@ button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
+.content {
+  width: 100vw;
+  
+  
+  align-items: center;
+  justify-content: center;
+  
+  
+}
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.add-question {
+  display: flex;
+  flex-direction: column;
+  justify-content: center; 
+  align-items: center;     
+  /* height: 100vh;            */
+  text-align: center;   
+  
+  
+}
+
+.center-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center; 
+  align-items: center;     
+  /* height: 100vh;            */
+  text-align: center;   
+  
+  
+}
+.add-question > p{
+  text-align: center;
+}
+
+.text-field {
+  margin: 5px;
+}
+
+
+.stars {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+.star {
+  height: 32px;
+  width: 32px;
+}
+
+.hide {
+  display: none;
+}
+
+.question {
+  
+  background-color: whitesmoke;
+  width: 600px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center; 
+  align-items: center;  
+  padding: 0 20px;
+  margin: 20px auto;
+  border-radius: 10px;
+  border: 2px solid gray;
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
+}
+.question > p {
+  width: 80%;
+  text-align: center;
+  padding: 5px;
+  
+  margin: 5px 0;
+}
+.question > .title {
+  font-size: large;
+  font-weight: bolder;
+  border: 2px solid #779878 ;
+  background-color: #aedab0;
+}
+
+.question > .body {
+  
+  border-bottom: 2px solid #779878;
+height: 100%;
+}
+
+.question > .answer-content {
+  margin-bottom: 10px;
+}
+
+.question > .options {
+  display: grid;
+  grid-template-columns: auto auto;
+}
+
+.option-button {
+  width: 200px;
 }
